--- a/plugin.cfg
+++ b/plugin.cfg
@@ -31,51 +31,17 @@ FOLDER=unify_presence
 # replaced by "...". You can use blanks, uppercase/lowercase etc.
 TITLE=UniFi Presence
 
-[AUTOUPDATE]
-# If your plugin offers automatic updates, please enable the following option.
-# Details here: http://www.loxwiki.eu/x/WoG3AQ
-AUTOMATIC_UPDATES=true
- 
-# This is the URL to your release.cfg file. This file will be checked for
-# new releases if the user eneables autoupdates. If the version number
-# given in the release.cfg file is newer than the installed one, the
-# plugin archive will be downloaded from the URL given in the release.cfg file
-# and will be installed automatically
-RELEASECFG=https://raw.githubusercontent.com/LoxYourLife/unifi-presence/master/release.cfg
- 
-# This is the URL to your prerelease.cfg file. This file will be checked for
-# new prereleases if the user enables autoupdates for prereleases. If the
-# version number given in the release.cfg file is newer than the installed
-# one, the plugin archive will be downloaded from the URL given in the
-# release.cfg file and will be installed automatically
-PRERELEASECFG=https://raw.githubusercontent.com/LoxYourLife/unifi-presence/master/prerelease.cfg
-
 [SYSTEM]
-# If a reboot is needed after the plugin was installed, enable the following
-# option:
-REBOOT=false
- 
-# If your Plugin runs only on special LoxBerry Versions, please set the
-# following options. If you plugin is compatible with all versions or at least
-# with all future versions, please set this to false or leave it empty..
-# Note! If you use the new Plugin Interface V2  - I think you will, because you
-# currently read THIS file ;-) - please set the Minimum version to 0.3.0!
-LB_MINIMUM=0.3.1
-LB_MAXIMUM=false
- 
-# If your plugin runs only on a special architecture (e.g. if you use the GPIOs
-# on a Raspberry platform), please set the architecture here. You can seperate
-# different architectures with a comma. Set to false or leave it empty if your
-# plugin do not use any special features of an architecture.
-# PUT in QUOTES ""!!!
-# Please check http://www.loxwiki.eu:80/x/VoU_AQ section 5.1 for supported
-# architectures and strings you should use here.
-ARCHITECTURE="raspberry,x86"
- 
-# If you are using the LoxBerry::Log Modul in PHP or Perl and you would like to use User-defined loglevels,
-# enable this option. If enabled, the user will be able to choose a loglevel in the Plugin Management Widget.
-CUSTOM_LOGLEVELS=false
- 
 # Plugin Interface
 # Do not change this if you are not knowing what you are doing!
 INTERFACE=2.0
+REBOOT=false
+LB_MINIMUM=1.4.3
+LB_MAXIMUM=false
+# ARCHITECTURE="raspberry,x86,x64"
+CUSTOM_LOGLEVELS=false
+
+[AUTOUPDATE]
+AUTOMATIC_UPDATES=true
+RELEASECFG=https://raw.githubusercontent.com/LoxYourLife/unifi-presence/master/release.cfg
+PRERELEASECFG=https://raw.githubusercontent.com/LoxYourLife/unifi-presence/master/prerelease.cfg
