fix typo in plugin.cfg

--- a/plugin.cfg
+++ b/plugin.cfg
@@ -1,4 +1,4 @@
-[AURTHOR]
+[AUTHOR]
 # You can also use a Team/Project Name here and a generic email address
 # like info@..., BUT NEVER CHANGE this information in future updates! It
 # will be used to identify your Plugin, handle updates etc. If you change
