try to fix issues in plugin.cfg

--- a/plugin.cfg
+++ b/plugin.cfg
@@ -1,5 +1,5 @@
 [AUTHOR]
-# You can also use a Team/Project Name here and a generic email address
+# You can also use a Team/Projekt Name here and a generic email address 
 # like info@..., BUT NEVER CHANGE this information in future updates! It
 # will be used to identify your Plugin, handle updates etc. If you change
 # this information, LoxBerry could not identify your plugin and handle it as
@@ -9,10 +9,9 @@ EMAIL=kontakt@loxyourlife.de
 
 [PLUGIN]
 # The version of your plugin - important if you would like to write an
-# upgrade script. Use a correct syntax, which is supported by LoxBerry:
-# More info: http://www.loxwiki.eu/x/LYG3AQ
-VERSION=0.0.1
-  
+# upgrade script.
+VERSION=2.0.4
+
 # Short name and prefered subfolder of your Plugin (do not use blanks - they
 # will be filtered - and use lowercase only)! Used for script names in
 # daemon or cron (NAME) and as unique installation folder. If these names
@@ -25,11 +24,11 @@ VERSION=0.0.1
 # identify your plugin and will handle it as a different one - therefore
 # updates will definetely fail.
 NAME=unifi_presence
-FOLDER=unify_presence
- 
-# Friendly Long Name of your Plugin - 25 Characters maximum! All others maybe
+FOLDER=unifi_presence
+
+# Friendly Long Name of your Plugin - 25 Characters maximum! All others maybe 
 # replaced by "...". You can use blanks, uppercase/lowercase etc.
-TITLE=UniFi Presence
+TITLE=Unifi Presence
 
 [SYSTEM]
 # Plugin Interface
@@ -42,6 +41,6 @@ LB_MAXIMUM=false
 CUSTOM_LOGLEVELS=false
 
 [AUTOUPDATE]
-AUTOMATIC_UPDATES=true
+AUTOMATIC_UPDATES=false
 RELEASECFG=https://raw.githubusercontent.com/LoxYourLife/unifi-presence/master/release.cfg
 PRERELEASECFG=https://raw.githubusercontent.com/LoxYourLife/unifi-presence/master/prerelease.cfg
