--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev:login": "LBHOMEDIR=$(pwd)/loxberry nodemon -w bin bin/index.js --dev login",
     "dev:clients": "LBHOMEDIR=$(pwd)/loxberry nodemon -w bin bin/index.js --dev clients",
-    "dev:eventsc": "LBHOMEDIR=$(pwd)/loxberry nodemon -w bin bin/index.js --dev events",
+    "dev:events": "LBHOMEDIR=$(pwd)/loxberry nodemon -w bin bin/index.js --dev events",
     "lint": "eslint bin",
     "prettify": "prettier --write bin"
   },
