--- a/plugin.cfg
+++ b/plugin.cfg
@@ -41,6 +41,6 @@ LB_MAXIMUM=false
 CUSTOM_LOGLEVELS=false
 
 [AUTOUPDATE]
-AUTOMATIC_UPDATES=false
+AUTOMATIC_UPDATES=true
 RELEASECFG=https://raw.githubusercontent.com/LoxYourLife/unifi-presence/master/release.cfg
 PRERELEASECFG=https://raw.githubusercontent.com/LoxYourLife/unifi-presence/master/prerelease.cfg
