--- a/bin/package.json
+++ b/bin/package.json
@@ -10,6 +10,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "pm2 start unifi.config.js",
     "stop": "pm2 stop unifi.config.js",
+    "delete": "pm2 del unifi.config.js",
+    "status": "pm2 status unifi.config.js",
     "restart": "pm2 restart unifi.config.js"
   },
   "dependencies": {
