enhance the user experience and bugfixes

--- a/bin/package.json
+++ b/bin/package.json
@@ -8,11 +8,11 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "pm2 start unifi.config.js",
-    "stop": "pm2 stop unifi.config.js",
-    "delete": "pm2 del unifi.config.js",
-    "status": "pm2 status unifi.config.js",
-    "restart": "pm2 restart unifi.config.js"
+    "start": "PM2_HOME=$(pwd)/.pm2 pm2 start unifi.config.js",
+    "stop": "PM2_HOME=$(pwd)/.pm2 pm2 stop unifi.config.js",
+    "delete": "PM2_HOME=$(pwd)/.pm2 pm2 del unifi.config.js",
+    "status": "PM2_HOME=$(pwd)/.pm2 pm2 status unifi.config.js",
+    "restart": "PM2_HOME=$(pwd)/.pm2 pm2 restart unifi.config.js"
   },
   "dependencies": {
     "axios": "0.23.0",
