--- a/package.json
+++ b/package.json
@@ -28,36 +28,36 @@
   },
   "devDependencies": {
     "@babel/preset-env": "7.16.11",
-    "@quasar/extras": "1.13.3",
-    "@quasar/vite-plugin": "1.0.7",
-    "@vitejs/plugin-vue": "1.9.3",
-    "@vue/vue3-jest": "^27.0.0-alpha.4",
-    "@vueuse/core": "8.1.1",
+    "@quasar/extras": "1.13.5",
+    "@quasar/vite-plugin": "1.0.9",
+    "@vitejs/plugin-vue": "2.3.1",
+    "@vue/vue3-jest": "27.0.0-alpha.4",
+    "@vueuse/core": "8.2.5",
     "axios": "0.26.1",
-    "body-parser": "1.19.0",
+    "body-parser": "1.20.0",
     "eslint": "7.32.0",
-    "express": "4.17.1",
-    "express-fileupload": "1.2.1",
-    "express-handlebars": "5.3.4",
-    "i18next": "21.5.2",
-    "jayson": "3.6.5",
+    "express": "4.17.3",
+    "express-fileupload": "1.3.1",
+    "express-handlebars": "6.0.4",
+    "i18next": "21.6.14",
+    "jayson": "3.6.6",
     "jest": "27.5.1",
     "jest-each": "27.5.1",
     "jest-extended": "2.0.0",
-    "jest-when": "^3.5.1",
+    "jest-when": "3.5.1",
     "lodash": "4.17.21",
     "minimist": ">=1.2.6",
     "nock": "13.2.4",
     "nodemon": "2.0.15",
     "prettier": "2.4.0",
-    "quasar": "2.6.1",
-    "sass": "1.43.4",
+    "quasar": "2.6.5",
+    "sass": "1.50.0",
     "supertest": "6.2.2",
-    "vite": "2.6.4",
-    "vue": "3.2.16",
+    "vite": "2.9.1",
+    "vue": "3.2.31",
     "vue-i18n": "9.1.9",
-    "vue-router": "4.0.12",
+    "vue-router": "4.0.14",
     "vuex": "4.0.2",
-    "ws": "8.2.3"
+    "ws": "8.5.0"
   }
 }
