type(feat): Required Changes for Loxberry Express 1.0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "unifi-presence",
-  "version": "1.0.0",
+  "version": "2.0.1",
   "description": "",
   "main": "index.js",
   "repository": "github:LoxYourLife/unifi-presence.git",
@@ -8,7 +8,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest test --coverage",
-    "dev": "nodemon --watch webfrontend/htmlauth --watch templates .dev/index",
+    "dev": "nodemon --watch webfrontend/htmlauth --watch templates --exec 'node_modules/.bin/loxberryExpressDevServer' -- ./",
     "app": "vite",
     "build": "vite build && rm -rf webfrontend/htmlauth/assets && cp -r build/assets webfrontend/htmlauth/assets && cp build/build.html templates/index.hbs",
     "serve": "vite preview",
@@ -53,6 +53,7 @@
     "jest-extended": "2.0.0",
     "jest-when": "3.5.1",
     "lodash": "4.17.21",
+    "loxberry-express-dev-server": "1.0.1",
     "minimist": ">=1.2.6",
     "nock": "13.2.4",
     "nodemon": "2.0.15",
