--- a/prerelease.cfg
+++ b/prerelease.cfg
@@ -1,14 +1,4 @@
 [AUTOUPDATE]
-# This file is used if you would like to provide automatic updates. Put
-# this file into your repo and give a link to this file in your plugin.cfg
-# If you would like to release an update, edit VERSION here and give
-# the donwload link here
-
-# Version of the new release
-VERSION=2.0.1
-
-# Download URL of the ZIP Archive
-ARCHIVEURL=https://github.com/LoxYourLife/unifi-presence/archive/2.0.1.zip
-
-# URL for further information about this release
+VERSION=2.1.0
+ARCHIVEURL=https://github.com/LoxYourLife/unifi-presence/archive/2.1.0-rc.zip
 INFOURL=https://github.com/LoxYourLife/unifi-presence/releases
