--- a/package.json
+++ b/package.json
@@ -4,6 +4,21 @@
   "description": "",
   "main": "index.js",
   "repository": "github:LoxYourLife/unifi-presence.git",
+  "config": {
+    "eslint": "--ignore-path .gitignore --cache --format=codeframe --max-warnings=0 \"{src,scripts,tests,.github}/**/*.{js,md,html}\" \"*.{js,md,html}\" \".*.{js,md,html}\"",
+    "prettier": "--ignore-path .gitignore --loglevel=warn \"{src,scripts,tests,.github}/**/*.{js,md,yml,json,html}\" \"*.{js,yml,json,html}\" \".*.{js,yml,json,html}\" \"!package-lock.json\"",
+    "release": {
+      "additionalNodeModules": [
+        "bin"
+      ],
+      "additionalCommands": [
+        {
+          "command": "npm run build",
+          "gitFiles": "webfrontend templates"
+        }
+      ]
+    }
+  },
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch",
@@ -18,20 +33,16 @@
     "lint": "eslint bin",
     "prettify": "prettier --write bin",
     "zip": "rm -f unifi_presence.zip && zip -r unifi_presence.zip . -x \".git/*\" -x \"node_modules/*\" -x \"loxberry/*\" -x \"data/*\" -x \"coverage/*\" -x \"build/*\" -x \"bin/node_modules/*\"",
-    "release:major": "npm run build && changelog -M -a && node .github/release.js major false",
-    "release:minor": "npm run build && changelog -m -a && node .github/release.js minor false",
-    "release:patch": "npm run build && changelog -p -a && node .github/release.js patch false",
-    "pre:major": "npm run build && changelog -M -a && node .github/release.js major true",
-    "pre:minor": "npm run build && changelog -m -a && node .github/release.js minor true",
-    "pre:patch": "npm run build && changelog -p -a && node .github/release.js patch true"
+    "release:major": "node .github/release.js major false",
+    "release:minor": "node .github/release.js minor false",
+    "release:patch": "node .github/release.js patch false",
+    "pre:major": "node .github/release.js major true",
+    "pre:minor": "node .github/release.js minor true",
+    "pre:patch": "node .github/release.js patch true"
   },
   "type": "commonjs",
   "author": "Ronald Marske",
   "license": "ISC",
-  "config": {
-    "eslint": "--ignore-path .gitignore --cache --format=codeframe --max-warnings=0 \"{src,scripts,tests,.github}/**/*.{js,md,html}\" \"*.{js,md,html}\" \".*.{js,md,html}\"",
-    "prettier": "--ignore-path .gitignore --loglevel=warn \"{src,scripts,tests,.github}/**/*.{js,md,yml,json,html}\" \"*.{js,yml,json,html}\" \".*.{js,yml,json,html}\" \"!package-lock.json\""
-  },
   "devDependencies": {
     "@babel/preset-env": "7.16.11",
     "@quasar/extras": "1.13.5",
@@ -58,6 +69,7 @@
     "nock": "13.2.4",
     "nodemon": "2.0.15",
     "prettier": "2.4.0",
+    "prompts": "2.4.2",
     "quasar": "2.6.5",
     "read-ini-file": "3.0.1",
     "sass": "1.50.0",
