--- a/package.json
+++ b/package.json
@@ -45,41 +45,38 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/preset-env": "7.16.11",
-    "@quasar/extras": "1.13.5",
-    "@quasar/vite-plugin": "1.0.9",
-    "@vitejs/plugin-vue": "2.3.1",
-    "@vue/vue3-jest": "27.0.0-alpha.4",
-    "@vueuse/core": "8.2.5",
-    "axios": "0.26.1",
-    "body-parser": "1.20.0",
-    "eslint": "7.32.0",
-    "express": "4.17.3",
-    "express-fileupload": "1.3.1",
-    "express-handlebars": "6.0.4",
+    "@quasar/extras": "1.15.9",
+    "@quasar/vite-plugin": "1.3.0",
+    "@vitejs/plugin-vue": "4.0.0",
+    "@vue/vue3-jest": "29.2.2",
+    "@vueuse/core": "9.9.0",
+    "axios": "1.2.2",
+    "body-parser": "1.20.1",
+    "eslint": "8.30.0",
     "generate-changelog": "1.8.0",
-    "i18next": "21.6.14",
-    "jayson": "3.6.6",
-    "jest": "27.5.1",
-    "jest-each": "27.5.1",
-    "jest-extended": "2.0.0",
-    "jest-when": "3.5.1",
+    "i18next": "22.4.6",
+    "jayson": "4.0.0",
+    "jest": "29.3.1",
+    "jest-each": "29.3.1",
+    "jest-extended": "3.2.0",
+    "jest-when": "3.5.2",
     "lodash": "4.17.21",
-    "loxberry-express-dev-server": "1.0.1",
-    "minimist": ">=1.2.6",
-    "nock": "13.2.4",
-    "nodemon": "2.0.15",
-    "prettier": "2.4.0",
+    "loxberry-express-dev-server": "2.0.1",
+    "minimist": "1.2.7",
+    "nock": "13.2.9",
+    "nodemon": "2.0.20",
+    "prettier": "2.8.1",
     "prompts": "2.4.2",
-    "quasar": "2.6.5",
-    "read-ini-file": "3.0.1",
-    "sass": "1.50.0",
-    "supertest": "6.2.2",
-    "vite": "2.9.1",
-    "vue": "3.2.31",
-    "vue-i18n": "9.1.9",
-    "vue-router": "4.0.14",
-    "vuex": "4.0.2",
-    "write-ini-file": "3.0.2",
-    "ws": "8.5.0"
+    "quasar": "2.11.3",
+    "read-ini-file": "4.0.0",
+    "sass": "1.57.1",
+    "supertest": "6.3.3",
+    "vite": "4.0.3",
+    "vue": "3.2.45",
+    "vue-i18n": "9.2.2",
+    "vue-router": "4.1.6",
+    "vuex": "4.1.0",
+    "write-ini-file": "4.0.1",
+    "ws": "8.11.0"
   }
 }
